feat: edit adaprive styles

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -28,12 +28,26 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    @media (max-width: 1285px) {
+      justify-content: space-evenly;
+    }
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 1422px ) {
+      flex-direction: column-reverse;
+      
+      .sort {
+       margin-bottom: 20px;
+      }
+    }
+      
+    
   }
 }
 
