--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -3,7 +3,9 @@
 .categories {
   ul {
     display: flex;
-
+    flex-wrap: wrap;
+    justify-content: center;
+  
     li {
       background-color: #f9f9f9;
       padding: 13px 30px;
