--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -3,11 +3,10 @@
 .pizza-block {
   width: 280px;
   text-align: center;
-  margin-bottom: 65px;
+  margin: 20px;
+  
 
-  &:not(:nth-of-type(4n)) {
-    margin-right: 35px;
-  }
+
 
   &__image {
     width: 260px;
@@ -16,7 +15,7 @@
   &__title {
     font-size: 20px;
     font-weight: 900;
-    letter-spacing: 1%;
+    //letter-spacing: 1%;
     margin-bottom: 20px;
   }
 
