--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -134,7 +134,12 @@
     align-items: center;
     line-height: 23px;
     padding: 12px 25px;
-
+    
+    @media (max-width:762px) {
+      padding: 8px 12px;  
+        margin-top: 30px;
+    }
+    
     svg {
       margin-right: 8px;
       margin-bottom: 1px;
@@ -143,6 +148,7 @@
     span {
       font-weight: 600;
       font-size: 16px;
+
     }
   }
 }
