--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,11 +4,18 @@
   border-bottom: 1px solid $gray-line;
   padding: 40px 0;
 
+  @media (max-width:733px) {
+    padding: 20px;
+  }
   .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 60px;
+
+    @media (max-width:733px) {
+      flex-direction: column;
+    }
   }
 
   &__logo {
