--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -32,7 +32,7 @@ body {
   &__items {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
 
     @media (max-width: 1285px) {
       justify-content: space-evenly;
